# danmaku_game_Rust

./: .gitignore  Cargo.toml  LICENSE  README.md  deploy.yml  index.html
.github/workflows/: deploy.yml
src/: main.rs
