[package]
name = "danmaku_game_Rust"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18.0"
rand = "0.9.2"
getrandom = {version = "0.3", features = ["wasm_js"]}

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3
[profile.release]
lto = true
codegen-units = 1
opt-level = "z"